--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "frontend",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://mikevyt.github.io",
+  "homepage": "https://mikevyt.github.io/portfolio",
   "dependencies": {
     "@types/jest": "24.0.20",
     "@types/node": "12.11.7",
