--- a/package.json
+++ b/package.json
@@ -8,11 +8,13 @@
     "@types/node": "12.11.7",
     "@types/react": "16.9.11",
     "@types/react-dom": "16.9.3",
+    "@types/react-scroll": "^1.5.4",
     "bulma": "^0.8.0",
     "gh-pages": "^2.1.1",
     "react": "^16.11.0",
     "react-dom": "^16.11.0",
     "react-scripts": "3.2.0",
+    "react-scroll": "^1.7.14",
     "typescript": "3.6.4"
   },
   "scripts": {
