--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@types/react": "16.9.11",
     "@types/react-dom": "16.9.3",
     "@types/react-scroll": "^1.5.4",
+    "animate.css": "^3.7.2",
     "bulma": "^0.8.0",
     "gh-pages": "^2.1.1",
     "react": "^16.11.0",
