--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@types/react-scroll": "^1.5.4",
     "animate.css": "^3.7.2",
     "bulma": "^0.8.0",
+    "bulma-divider": "^0.2.0",
     "gh-pages": "^2.1.1",
     "react": "^16.11.0",
     "react-dom": "^16.11.0",
