--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "gh-pages": "^2.1.1",
     "react": "^16.11.0",
     "react-dom": "^16.11.0",
-    "react-scripts": "3.2.0",
+    "react-scripts": "^3.4.0",
     "react-scroll": "^1.7.14",
     "typescript": "3.6.4"
   },
@@ -43,6 +43,6 @@
     ]
   },
   "devDependencies": {
-    "node-sass": "^4.13.0"
+    "node-sass": "^4.13.1"
   }
 }
