--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -11,6 +11,9 @@ jobs:
             - uses: actions/setup-node@v2
               with:
                 node-version: '14'
+            - name: 'set git identity'
+              run: 'git config user.email "michael.vytlingam@gmail.com"'
+              run: 'git config user.name "Michael Vytlingam"'
             - name: 'npm install'
               run: 'npm install'
             - name: 'npm run predeploy'
